<resources>
    <string name="app_name">WordSolitaire</string>
    <string name="start">Играть</string>
    <string name="shop">Магазин</string>
    <string name="stat">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="authors">Авторы</string>
    <string name="normal_mode">Обычный режим</string>
    <string name="cards">Карты</string>
    <string name="price_card1">100</string>
    <string name="background">Фон</string>
    <string name="price_card2">200</string>
    <string name="price_card3">300</string>
    <string name="price_background1">100</string>
    <string name="price_background2">200</string>
    <string name="price_background3">300</string>
    <string name="play">Играть</string>
    <string name="word_solitaire">Словесный пасьянс</string>
    <string name="easy">легко</string>
    <string name="normal">нормально</string>
    <string name="hard">сложно</string>
    <string name="insane">невозможно</string>
    <string name="choose_difficulty">Выберите сложность</string>
</resources>