<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playbuttoneasy"
        android:layout_width="343dp"
        android:layout_height="64dp"
        android:background="@drawable/buttons_menu"
        android:text="@string/easy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.158" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playbuttonnormal"
        android:layout_width="343dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttons_menu"
        android:text="@string/normal"
        app:layout_constraintEnd_toEndOf="@+id/playbuttoneasy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/playbuttoneasy"
        app:layout_constraintTop_toBottomOf="@+id/playbuttoneasy" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playbuttonhard"
        android:layout_width="343dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttons_menu"
        android:text="@string/hard"
        app:layout_constraintEnd_toEndOf="@+id/playbuttonnormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/playbuttonnormal"
        app:layout_constraintTop_toBottomOf="@+id/playbuttonnormal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playbuttoninsane"
        android:layout_width="343dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttons_menu"
        android:text="@string/insane"
        app:layout_constraintEnd_toEndOf="@+id/playbuttonhard"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/playbuttonhard"
        app:layout_constraintTop_toBottomOf="@+id/playbuttonhard" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/choose_difficulty"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>