<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/cards"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/card_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/card_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/card1price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/price_card1"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/card_1"
        app:layout_constraintStart_toStartOf="@+id/card_1"
        app:layout_constraintTop_toBottomOf="@+id/card_1" />

    <ImageButton
        android:id="@+id/card_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/card_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_2"
        app:layout_constraintTop_toTopOf="@+id/card_2" />

    <TextView
        android:id="@+id/card3price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_card3"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/card_3"
        app:layout_constraintStart_toStartOf="@+id/card_3"
        app:layout_constraintTop_toTopOf="@+id/card2price" />

    <ImageButton
        android:id="@+id/card_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/card_1"
        app:layout_constraintEnd_toStartOf="@+id/card_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_1"
        app:layout_constraintTop_toTopOf="@+id/card_1" />

    <TextView
        android:id="@+id/card2price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_card2"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/card_2"
        app:layout_constraintStart_toStartOf="@+id/card_2"
        app:layout_constraintTop_toTopOf="@+id/card1price" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/background"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/card3price" />

    <TextView
        android:id="@+id/background1price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        android:text="@string/price_background1"
        app:layout_constraintEnd_toEndOf="@+id/background_1"
        app:layout_constraintStart_toStartOf="@+id/background_1"
        app:layout_constraintTop_toBottomOf="@+id/background_1" />

    <TextView
        android:id="@+id/background2price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_background2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/background1price"
        app:layout_constraintEnd_toEndOf="@+id/background_2"
        app:layout_constraintStart_toStartOf="@+id/background_2"
        app:layout_constraintTop_toTopOf="@+id/background1price"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/background_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/background_2"
        app:layout_constraintTop_toTopOf="@+id/background_2" />

    <ImageButton
        android:id="@+id/background_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/background_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/background_1"
        app:layout_constraintTop_toTopOf="@+id/background_1" />

    <ImageButton
        android:id="@+id/background_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/background_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/background3price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_background3"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/background2price"
        app:layout_constraintEnd_toEndOf="@+id/background_3"
        app:layout_constraintStart_toStartOf="@+id/background_3"
        app:layout_constraintTop_toTopOf="@+id/background2price" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moneyicon" />

    <TextView
        android:id="@+id/moneyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.666" />


</androidx.constraintlayout.widget.ConstraintLayout>